--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ body {
 #images {
 	padding: 2em;
 	border-bottom: 50px;
-	border-image: url(../images/border.png) 5% fill repeat;
+	/*border-image: url(../images/border.png) 5% fill repeat;*/
 }
 
 #game-stats {
