updated some more items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,9 @@ body {
 	flex-direction: column;
 	align-items: center;
 }
+
+/*.container,#images,#game-stats {
+	border-style: dashed;
+	border-width: .3em;
+	height: 100%;
+}*/
