--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,11 @@ body {
 	font-family: skater;
 }
 
+h4 {
+	font-family: 'Indie Flower', cursive;
+	font-size: 12;
+}
+
 .page-header {
 	margin:0;
 }
@@ -56,8 +61,18 @@ body {
 	align-items: center;
 }
 
-/*.container,#images,#game-stats {
-	border-style: dashed;
-	border-width: .3em;
-	height: 100%;
-}*/
+#artist-img {
+	transition: 1s ease-in-out;
+}
+
+.fade {
+	opacity:0;
+	transition: 1s ease-in-out;
+}
+
+.fade-in {
+	opacity: 0;
+	animation:fadeIn ease-in 1;
+	animation-fill-mode:forwards;
+	animation-duration:1s;
+}
