--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,20 @@ h4 {
 	opacity:0;
 	transition: 1s ease-in-out;
 }
+
+#main-content {
+	position: relative;
+	z-index: 0;
+}
+
+#game-over {
+	position: absolute;
+	z-index: 1;
+	top:25%;
+	left: 35%;
+}	
+
+#game-over h1 {
+	font-size: 6em;
+	color: red;
+}
