--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-body {
-	/*background-image: url(../images/HipHopClassics.jpg)*/
-}
-
 @font-face {
 	font-family: tobec;
 	src: url(fonts/Tobec.ttf);
@@ -35,6 +31,10 @@ h4 {
 	flex-direction: row;
 }
 
+#artist-name, #song-name {
+	transition: 1s ease-in-out;
+}
+
 #images {
 	padding: 2em;
 	border-bottom: 50px;
@@ -46,21 +46,11 @@ h4 {
 
 .list-inline li h1 {
 	border-bottom: solid;
-}
-
-.flex-column {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	transition: 1s ease-in-out;
 }
 
 #artist-img {
 	width: 100%;
-	transition: 1s ease-in-out;
-}
-
-.fade {
-	opacity:0;
 	transition: 1s ease-in-out;
 }
 
@@ -79,4 +69,15 @@ h4 {
 #game-over h1 {
 	font-size: 6em;
 	color: red;
+}
+
+.fade {
+	opacity:0;
+	transition: 1s ease-in-out;
+}
+
+.flex-column {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
